# streamlit_study

./: app.py  pyproject.toml  requirements.txt
