[tool.poetry]
name = "streamlit-study"
version = "0.1.0"
description = ""
authors = ["tomo3141592653 <tomo3141592653@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.0"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
